<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity">


    <LinearLayout
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/welcomeBack"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Berikut data registrasi anda"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/judul"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/name"
        android:textColor="@color/black"
        android:width="50pt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text=""
        android:textColor="@color/black"
        android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/name"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/nim"
            android:textColor="@color/black"
            android:width="50pt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/nimText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/nim"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/title"
            android:textColor="@color/black"
            android:width="50pt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dospem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/title"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/dospem"
            android:textColor="@color/black"
            android:width="50pt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dospemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dospen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/dospem"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/dospen"
            android:textColor="@color/black"
            android:width="50pt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dospenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_below="@id/dospen"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/date"
            android:textColor="@color/black"
            android:width="50pt"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/date"
        >


        <com.google.android.material.button.MaterialButton

            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:background="@drawable/bg_button"
            android:text="@string/edit" />


        <com.google.android.material.button.MaterialButton

            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textStyle="bold"
            android:background="@drawable/bg_button"
            android:text="@string/logout" />



    </LinearLayout>
</RelativeLayout>